--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -208,7 +208,7 @@
       },
       {
         "question": "Is the app free?",
-        "answer": "Yes, the app offers a free version with basic features."
+        "answer": "Yes, the app offers a free."
       },
       {
         "question": "How can I contact support?",
