--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -207,7 +207,7 @@
       },
       {
         "question": "Est-ce que l'application est gratuite ?",
-        "answer": "Oui, l'application propose une version gratuite avec des fonctionnalités de base."
+        "answer": "Oui, l'application propose une version gratuite."
       },
       {
         "question": "Comment puis-je contacter l'assistance ?",
